--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<!-- 2016-11-07 Mon 21:07 -->
+<!-- 2016-11-09 Wed 23:13 -->
 <meta  charset="utf-8">
 <meta  name="viewport" content="width=device-width, initial-scale=1">
 <title>Empreendimento turístico</title>
@@ -191,11 +191,11 @@ for the JavaScript code in this tag.
 <li><a href="#orgheadline14">2.5. Funcionários</a></li>
 </ul>
 </li>
-<li><a href="#orgheadline34">3. <span class="todo IN_PROGRESS">IN-PROGRESS</span> Definição do Ambito</a>
+<li><a href="#orgheadline35">3. <span class="todo IN_PROGRESS">IN-PROGRESS</span> Definição do Ambito</a>
 <ul>
 <li><a href="#orgheadline16">3.1. Caraterísticas e Objetivos</a></li>
 <li><a href="#orgheadline17">3.2. Público Alvo</a></li>
-<li><a href="#orgheadline28">3.3. Modelo de Funcionamento</a>
+<li><a href="#orgheadline29">3.3. Modelo de Funcionamento</a>
 <ul>
 <li><a href="#orgheadline25">3.3.1. Edificio Central</a>
 <ul>
@@ -208,37 +208,38 @@ for the JavaScript code in this tag.
 <li><a href="#orgheadline24">3.3.1.7. Canil</a></li>
 </ul>
 </li>
-<li><a href="#orgheadline26">3.3.2. Casas</a></li>
-<li><a href="#orgheadline27">3.3.3. Área comum e Acessos</a></li>
+<li><a href="#orgheadline27">3.3.2. Casas</a></li>
+<li><a href="#orgheadline28">3.3.3. Área comum e Acessos</a></li>
 </ul>
 </li>
 <li><a href="#orgheadline32">3.4. Método de Construção</a>
 <ul>
 <li><a href="#orgheadline31">3.4.1. Soluções Técnicas</a>
 <ul>
-<li><a href="#orgheadline29">3.4.1.1. Painéis Solares Fotovoltaicos</a></li>
-<li><a href="#orgheadline30">3.4.1.2. Casa</a></li>
+<li><a href="#orgheadline30">3.4.1.1. Painéis Solares Fotovoltaicos</a></li>
+<li><a href="#orgheadline26">3.4.1.2. Casa</a></li>
 </ul>
 </li>
 </ul>
 </li>
 <li><a href="#orgheadline33">3.5. Análise SWOT</a></li>
+<li><a href="#orgheadline34">3.6. Canvas</a></li>
 </ul>
 </li>
-<li><a href="#orgheadline35">4. <span class="todo TODO">TODO</span> Enquadramento Legal</a></li>
-<li><a href="#orgheadline36">5. <span class="todo TODO">TODO</span> Quantificação de Custos</a></li>
+<li><a href="#orgheadline36">4. <span class="todo TODO">TODO</span> Enquadramento Legal</a></li>
+<li><a href="#orgheadline37">5. <span class="todo TODO">TODO</span> Quantificação de Custos</a></li>
 <li><a href="#orgheadline6">6. <span class="todo TODO">TODO</span> Calendarização</a></li>
-<li><a href="#orgheadline41">7. <span class="todo TODO">TODO</span> Estudos de Viabilidade</a>
+<li><a href="#orgheadline42">7. <span class="todo TODO">TODO</span> Estudos de Viabilidade</a>
 <ul>
-<li><a href="#orgheadline37">7.1. Viabilidade Técnica</a></li>
-<li><a href="#orgheadline38">7.2. Viabilidade Ambiental</a></li>
-<li><a href="#orgheadline39">7.3. Viabilidade Politíca-Social</a></li>
-<li><a href="#orgheadline40">7.4. Viabilidade Económica e Financeira</a></li>
+<li><a href="#orgheadline38">7.1. Viabilidade Técnica</a></li>
+<li><a href="#orgheadline39">7.2. Viabilidade Ambiental</a></li>
+<li><a href="#orgheadline40">7.3. Viabilidade Politíca-Social</a></li>
+<li><a href="#orgheadline41">7.4. Viabilidade Económica e Financeira</a></li>
 </ul>
 </li>
 <li><a href="#orgheadline8">8. <span class="todo TODO">TODO</span> Avaliação Financeira</a></li>
-<li><a href="#orgheadline42">9. <span class="todo TODO">TODO</span> Organograma de Gestão do Empreendimento</a></li>
-<li><a href="#orgheadline43">10. <span class="todo TODO">TODO</span> Conclusão</a></li>
+<li><a href="#orgheadline43">9. <span class="todo TODO">TODO</span> Organograma de Gestão do Empreendimento</a></li>
+<li><a href="#orgheadline44">10. <span class="todo TODO">TODO</span> Conclusão</a></li>
 </ul>
 </div>
 </div>
@@ -835,8 +836,8 @@ serviços prestados.
 
 
 
-<div id="outline-container-orgheadline34" class="outline-2">
-<h2 id="orgheadline34"><span class="section-number-2">3</span> <span class="todo IN_PROGRESS">IN-PROGRESS</span> Definição do Ambito</h2>
+<div id="outline-container-orgheadline35" class="outline-2">
+<h2 id="orgheadline35"><span class="section-number-2">3</span> <span class="todo IN_PROGRESS">IN-PROGRESS</span> Definição do Ambito</h2>
 <div class="outline-text-2" id="text-3">
 
 <div id="orgparagraph3" class="figure">
@@ -959,8 +960,8 @@ questão de moda.
 </div>
 </div>
 
-<div id="outline-container-orgheadline28" class="outline-3">
-<h3 id="orgheadline28"><span class="section-number-3">3.3</span> Modelo de Funcionamento</h3>
+<div id="outline-container-orgheadline29" class="outline-3">
+<h3 id="orgheadline29"><span class="section-number-3">3.3</span> Modelo de Funcionamento</h3>
 <div class="outline-text-3" id="text-3-3">
 <p>
 O complexo encontra-se dividido em 11 lotes, em que um dos lotes, que
@@ -1204,24 +1205,61 @@ canil.
 
 
 
-<div id="outline-container-orgheadline26" class="outline-4">
-<h4 id="orgheadline26"><span class="section-number-4">3.3.2</span> Casas</h4>
+<div id="outline-container-orgheadline27" class="outline-4">
+<h4 id="orgheadline27"><span class="section-number-4">3.3.2</span> Casas</h4>
 <div class="outline-text-4" id="text-3-3-2">
+<p>
+As casas, em um total de 10 na primeira fase, serão distribuídas por
+10 lotes ao longo de um caminho em terra batida, que percorre o
+complexo no seu comprimento, dividindo a área do complexo em duas.
+</p>
+
+
+
 
 <div id="orgparagraph6" class="figure">
 <p><img src="./images/container-2.png" alt="casa" title="Casa Tipo III" align="center" width="600">
 </p>
 <p><span class="figure-number">Figure 6:</span> Exemplo de uma das casas a serem construídas. Imagem obtida do website: <a href="http://www.niftyhomestead.com/">http://www.niftyhomestead.com/</a></p>
 </div>
+
+<p>
+A análise quanto ao método construtivos das casas, é feita no Secção
+<a href="#orgheadline26">3.4.1.2</a> deste trabalho.
+</p>
+
+<p>
+Algumas das vantagens de uma construção a partir de contentores
+usados:
+</p>
+
+<ul class="org-ul">
+<li><b>Preço</b>, pois é possível adquerir um contentor usado por 2,500 euros
+ou menos. Isso significa uma poupança em relação à uma estrutura de uma
+construção  tradicional. Embora exista várias modificações a serem
+feitas aos contentores, como aberturas para portas e janelas e
+reforço estrutural caso necessário, a diferença monetária ainda se
+mostra bastante significativa.</li>
+<li><b>Qualidade e Segurança</b>, e por qualidade, perceba-se os níveis e
+objetivos que são pretendidos para o complexo. As casas ao terem a
+sua origem em contentores, criam uma imagem de marca para o
+Empreendimento, que pode ser explorada em programas de marketing. Em
+referência à segurança, o fato de ser uma estrutura independente,
+sólida, e estruturalmente segura em que o corpo da estrutura age
+como um todo em não como membros independentes, faz com seja um
+excelente método de construção para zonas sísmicas como é o caso do
+nosso país.</li>
+<li><b>Tempo</b> de construção é muito inferior ao de uma construção
+tradicional visto a estrutura já se encontrar feita.</li>
+</ul>
 </div>
 </div>
 
 
 
 
-
-<div id="outline-container-orgheadline27" class="outline-4">
-<h4 id="orgheadline27"><span class="section-number-4">3.3.3</span> Área comum e Acessos</h4>
+<div id="outline-container-orgheadline28" class="outline-4">
+<h4 id="orgheadline28"><span class="section-number-4">3.3.3</span> Área comum e Acessos</h4>
 <div class="outline-text-4" id="text-3-3-3">
 <p>
 A área comum, é de livre acesso ao publico, e incluí o caminho de
@@ -1250,8 +1288,8 @@ nenhum problema se for utilizado uma carrinha.
 </div><div id="outline-container-orgheadline31" class="outline-4">
 <h4 id="orgheadline31"><span class="section-number-4">3.4.1</span> Soluções Técnicas</h4>
 <div class="outline-text-4" id="text-3-4-1">
-</div><div id="outline-container-orgheadline29" class="outline-5">
-<h5 id="orgheadline29"><span class="section-number-5">3.4.1.1</span> Painéis Solares Fotovoltaicos</h5>
+</div><div id="outline-container-orgheadline30" class="outline-5">
+<h5 id="orgheadline30"><span class="section-number-5">3.4.1.1</span> Painéis Solares Fotovoltaicos</h5>
 <div class="outline-text-5" id="text-3-4-1-1">
 <p>
 O terreno do complexo fica situado em zona rural, a aproximadamente
@@ -1273,8 +1311,8 @@ possível de extrair dos painéis.
 </div>
 
 
-<div id="outline-container-orgheadline30" class="outline-5">
-<h5 id="orgheadline30"><span class="section-number-5">3.4.1.2</span> Casa</h5>
+<div id="outline-container-orgheadline26" class="outline-5">
+<h5 id="orgheadline26"><span class="section-number-5">3.4.1.2</span> Casa</h5>
 <div class="outline-text-5" id="text-3-4-1-2">
 
 <div id="orgparagraph7" class="figure">
@@ -1282,6 +1320,51 @@ possível de extrair dos painéis.
 </p>
 <p><span class="figure-number">Figure 7:</span> Corte tipíco de uma parede e chão das Casas</p>
 </div>
+
+
+<p>
+Como já referido, as casas serão fabricadas a partir de contentores
+usados. As vantagens de usar uma estrutura metálica já existente são
+numerosas, e encontram-se referidas na secção <a href="#orgheadline27">3.3.2</a> deste trabalho
+</p>
+
+<p>
+Como base de suporte para (<sub>fundações</sub>_)  a casa, será construída
+uma plataforma em betão armado, com aproximadamente 20 cms de altura a
+partir do terreno e na parte da frente da casa, criando assim um
+degrau em betão armado, que depois pode ser revestido com madeira,
+caso seja decidido usar a plataforma para esplanada privada da casa.
+Nas zonas laterais, a fundação ficará ligeiramente mais alta que o
+terreno (o suficiente para que a água da chuva escorra naturalmente
+por gravidade), tal como na figura <a href="#orgparagraph7">7</a>.
+</p>
+
+<p>
+Tratando-se de uma zona calcária com bastante fissuração nas rochas
+existentes no terreno, e sendo esta uma zona de bastante formações
+geológicas como algares e grutas, e estando as casas situadas em
+terreno de maior elevação quando comparado com a vizinha imediata, não
+se prevê que exista problemas com o nível freático, no entanto, a
+plataforma de betão deverá ser assente no topo de um manto de pelos
+menos 15 cms de inertes, que poderão ser extraídos da zona do
+complexo.
+</p>
+
+<p>
+As paredes, exteriores, devem ser lixadas, removendo completamente a
+pintura existente nos contentores, para depois ser aplicado uma mão de
+primário, e posteriormente duas mãos de tinta de cor a ser decidida pelo
+arquiteto e decorador. No parte interior da parede exterior, serão
+aplicados placas de isolamento, de espessura a ser determinada após
+análise tecnica quanto à exposição solar, exposição aos ventos e
+outras características que possam afetar o isolamento térmico da casa.
+</p>
+
+
+<p>
+O telhado da casa deverá ser feito de EPDM, de forma a poder
+suportar o painel solar e a movimentação de trabalhadores no telhado. 
+</p>
 </div>
 </div>
 </div>
@@ -1291,38 +1374,69 @@ possível de extrair dos painéis.
 
 <div id="outline-container-orgheadline33" class="outline-3">
 <h3 id="orgheadline33"><span class="section-number-3">3.5</span> Análise SWOT</h3>
+<div class="outline-text-3" id="text-3-5">
+<p>
+A análise SWOT é apresentada na Figura <a href="#orgparagraph8">8</a>.
+</p>
+
+
+<div id="orgparagraph8" class="figure">
+<p><img src="./images/swot.png" alt="casa" title="Contentor" align="center" width="600">
+</p>
+<p><span class="figure-number">Figure 8:</span> Análise SWOT</p>
+</div>
 </div>
 </div>
 
-<div id="outline-container-orgheadline35" class="outline-2">
-<h2 id="orgheadline35"><span class="section-number-2">4</span> <span class="todo TODO">TODO</span> Enquadramento Legal</h2>
+
+
+<div id="outline-container-orgheadline34" class="outline-3">
+<h3 id="orgheadline34"><span class="section-number-3">3.6</span> Canvas</h3>
+<div class="outline-text-3" id="text-3-6">
+<p>
+O canvas para o trabalho é apresentado na Figura <a href="#orgparagraph9">9</a>.
+</p>
+
+
+<div id="orgparagraph9" class="figure">
+<p><img src="./images/canvas.png" alt="casa" title="Contentor" align="center" width="600">
+</p>
+<p><span class="figure-number">Figure 9:</span> Canvas</p>
 </div>
+</div>
+</div>
+</div>
+
 
 <div id="outline-container-orgheadline36" class="outline-2">
-<h2 id="orgheadline36"><span class="section-number-2">5</span> <span class="todo TODO">TODO</span> Quantificação de Custos</h2>
+<h2 id="orgheadline36"><span class="section-number-2">4</span> <span class="todo TODO">TODO</span> Enquadramento Legal</h2>
+</div>
+
+<div id="outline-container-orgheadline37" class="outline-2">
+<h2 id="orgheadline37"><span class="section-number-2">5</span> <span class="todo TODO">TODO</span> Quantificação de Custos</h2>
 </div>
 
 <div id="outline-container-orgheadline6" class="outline-2">
 <h2 id="orgheadline6"><span class="section-number-2">6</span> <span class="todo TODO">TODO</span> Calendarização</h2>
 </div>
 
-<div id="outline-container-orgheadline41" class="outline-2">
-<h2 id="orgheadline41"><span class="section-number-2">7</span> <span class="todo TODO">TODO</span> Estudos de Viabilidade</h2>
+<div id="outline-container-orgheadline42" class="outline-2">
+<h2 id="orgheadline42"><span class="section-number-2">7</span> <span class="todo TODO">TODO</span> Estudos de Viabilidade</h2>
 <div class="outline-text-2" id="text-7">
-</div><div id="outline-container-orgheadline37" class="outline-3">
-<h3 id="orgheadline37"><span class="section-number-3">7.1</span> Viabilidade Técnica</h3>
-</div>
-
-<div id="outline-container-orgheadline38" class="outline-3">
-<h3 id="orgheadline38"><span class="section-number-3">7.2</span> Viabilidade Ambiental</h3>
+</div><div id="outline-container-orgheadline38" class="outline-3">
+<h3 id="orgheadline38"><span class="section-number-3">7.1</span> Viabilidade Técnica</h3>
 </div>
 
 <div id="outline-container-orgheadline39" class="outline-3">
-<h3 id="orgheadline39"><span class="section-number-3">7.3</span> Viabilidade Politíca-Social</h3>
+<h3 id="orgheadline39"><span class="section-number-3">7.2</span> Viabilidade Ambiental</h3>
 </div>
 
 <div id="outline-container-orgheadline40" class="outline-3">
-<h3 id="orgheadline40"><span class="section-number-3">7.4</span> Viabilidade Económica e Financeira</h3>
+<h3 id="orgheadline40"><span class="section-number-3">7.3</span> Viabilidade Politíca-Social</h3>
+</div>
+
+<div id="outline-container-orgheadline41" class="outline-3">
+<h3 id="orgheadline41"><span class="section-number-3">7.4</span> Viabilidade Económica e Financeira</h3>
 </div>
 </div>
 
@@ -1330,12 +1444,12 @@ possível de extrair dos painéis.
 <h2 id="orgheadline8"><span class="section-number-2">8</span> <span class="todo TODO">TODO</span> Avaliação Financeira</h2>
 </div>
 
-<div id="outline-container-orgheadline42" class="outline-2">
-<h2 id="orgheadline42"><span class="section-number-2">9</span> <span class="todo TODO">TODO</span> Organograma de Gestão do Empreendimento</h2>
+<div id="outline-container-orgheadline43" class="outline-2">
+<h2 id="orgheadline43"><span class="section-number-2">9</span> <span class="todo TODO">TODO</span> Organograma de Gestão do Empreendimento</h2>
 </div>
 
-<div id="outline-container-orgheadline43" class="outline-2">
-<h2 id="orgheadline43"><span class="section-number-2">10</span> <span class="todo TODO">TODO</span> Conclusão</h2>
+<div id="outline-container-orgheadline44" class="outline-2">
+<h2 id="orgheadline44"><span class="section-number-2">10</span> <span class="todo TODO">TODO</span> Conclusão</h2>
 </div>
 <div id="footnotes">
 <h2 class="footnotes">Footnotes: </h2>
@@ -1368,7 +1482,7 @@ Administrador Geral para com o Empreendimento</div></div>
 </div></div>
 <div id="postamble" class="status">
 <p class="author">Author: Luis Moura, Diana Rodrigues</p>
-<p class="date">Created: 2016-11-07 Mon 21:07</p>
+<p class="date">Created: 2016-11-09 Wed 23:13</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
