--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<!-- 2016-11-09 Wed 23:13 -->
+<!-- 2016-11-10 Thu 01:39 -->
 <meta  charset="utf-8">
 <meta  name="viewport" content="width=device-width, initial-scale=1">
 <title>Empreendimento turístico</title>
@@ -157,7 +157,10 @@ for the JavaScript code in this tag.
 </head>
 <body>
 <div id="content">
-<h1 class="title">Empreendimento turístico</h1>
+<h1 class="title">Empreendimento turístico
+<br>
+<span class="subtitle">Aldeia Recanto da Natureza</span>
+</h1>
 <div id="table-of-contents">
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
@@ -877,7 +880,7 @@ e de acordo com a quantidade de informação disponível no momento.
 <h3 id="orgheadline16"><span class="section-number-3">3.1</span> Caraterísticas e Objetivos</h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
-A <a href="http://www.worldgbc.org/files/8613/6295/6420/World_Green_Building_Trends_SmartMarket_Report_2013.pdf">tendência</a> do sector imobiliário a nível mundia é clara. Existe um
+A <a href="http://www.worldgbc.org/files/8613/6295/6420/World_Green_Building_Trends_SmartMarket_Report_2013.pdf">tendência</a> do sector imobiliário a nível mundial é clara. Existe um
 <b>forte interesse do público pelo meio ambiente</b>, que certamente deverá
 aumentar, à medida que os efeitos das alterações climáticas são
 sentidas e intensificadas. O número de empresas e pessoas dedicadas à
@@ -946,7 +949,7 @@ associadas à vida campestre e às atividades ao ar livre.
 Quanto ao sexo, ambos os sexos devem utilizar de igual modo as nossas
 instalações, no entanto, o sexo masculino poderá ter uma maior
 incidência, devido a ser ele o que mais pratica exercício na serra. No
-intanto, esta diferença vem-se a reduzir, visto existir um número
+entanto, esta diferença vem-se a reduzir, visto existir um número
 crescente de indivíduos do sexo feminino, a praticarem
 atividades no exterior. 
 </p>
@@ -964,6 +967,20 @@ questão de moda.
 <h3 id="orgheadline29"><span class="section-number-3">3.3</span> Modelo de Funcionamento</h3>
 <div class="outline-text-3" id="text-3-3">
 <p>
+O empreendimento turístico irá laborar 365 dias por ano, havendo
+necessidade do envolvimento de inúmeros colaboradores para o bom
+funcionamento dos serviços oferecidos ao cliente, assim as diferentes
+secções, funcionaram de forma distinta, com horários e recursos
+humanos conforme as necessidades.
+</p>
+
+<p>
+No que diz respeito as instalações da aldeia hoteleira e turística é
+composta por um conjunto independente de casa pré-fabricadas a partir
+de contentores.
+</p>
+
+<p>
 O complexo encontra-se dividido em 11 lotes, em que um dos lotes, que
 apresenta uma área ligeiramente superior aos outros, vai ser usado
 para a construção do edificio central que albergará o escritório,
@@ -973,6 +990,7 @@ com parque de merendas e piscina biológica.
 Os restantes lotes serão usados para a construção de casas.   
 </p>
 </div>
+
 
 
 <div id="outline-container-orgheadline25" class="outline-4">
@@ -1068,7 +1086,7 @@ aquele espaço.
 <div class="outline-text-5" id="text-3-3-1-4">
 
 <div id="orgparagraph5" class="figure">
-<p><img src="./images/bio-pool.png" alt="casa" title="Contentor" align="center" width="600">
+<p><img src="./images/bio-pool.png" alt="Piscina Biológica" title="Piscina Biológica" align="center" width="600">
 </p>
 <p><span class="figure-number">Figure 5:</span> Exemplo de uma piscina biológica, em que o elemento "água", mistura-se com o elemento "terra". fonte de imagem: <a href="https://en.wikipedia.org/wiki/Natural_pool">https://en.wikipedia.org/wiki/Natural_pool</a></p>
 </div>
@@ -1376,18 +1394,61 @@ suportar o painel solar e a movimentação de trabalhadores no telhado.
 <h3 id="orgheadline33"><span class="section-number-3">3.5</span> Análise SWOT</h3>
 <div class="outline-text-3" id="text-3-5">
 <p>
-A análise SWOT é apresentada na Figura <a href="#orgparagraph8">8</a>.
+A Análise SWOT é uma ferramenta de gestão muito utilizada pelas
+empresas para o diagnóstico estratégico, facilita a identificação dos
+pontos fortes e os pontos fracos da empresa, relacionando-os que com a
+legislação aplicável em vigor, a conjuntura económica e do mercado em
+que opera. 
 </p>
+
+<p>
+Este tipo de análise é efetuado a 2 níveis, a nível interno e a nível
+externo. Ao nível interno são avaliados os pontos forte e fracos,
+enquanto que, ao nível externo são diagnosticadas as oportunidades e
+ameaças resultantes de uma análise da envolvente do empreendimento. Os
+dados que se obtém com a realização de uma análise SWOT permitem
+definir os objetivos futuros do empreendimento/empresa. 
+</p>
+
+
+<p>
+Aplicando esta ferramenta ao nosso empreendimento, efetuou-se uma
+análise, sendo os resultados da mesma apresentados na figura <a href="#orgparagraph8">8</a>
+</p>
+
+
 
 
 <div id="orgparagraph8" class="figure">
-<p><img src="./images/swot.png" alt="casa" title="Contentor" align="center" width="600">
+<p><img src="./images/swot.png" alt="swot" title="SWOT" align="center" width="600">
 </p>
 <p><span class="figure-number">Figure 8:</span> Análise SWOT</p>
 </div>
-</div>
-</div>
 
+<p>
+Neste sentido, pode dizer-se que esta empresa tem pontos fortes
+bastante claros e definidos que a diferenciam de possíveis
+concorrentes, o facto de se inserir num ambiente de natureza com uma
+beleza extrema e a possibilidade de cada cliente ter um espaço
+independente de forma a preservar a sua privacidade, são aspetos
+únicos que tornam este empreendimento tão singular. Por outro lado, as
+apostas que faz ao nível da qualidade dos serviços oferecidos e o
+facto de ter diversos serviços à disposição dos clientes também traz
+prestígio à empresa.
+</p>
+
+<p>
+Os pontos fracos dizem respeito ao facto de ser um investimento
+elevado e a possibilidade de haver falta de clientes em época baixa.
+</p>
+
+<p>
+Em relação às ameaças é algo que não é da responsabilidade do
+promotor, uma vez que a situação climática do País e as dificuldades
+que o País atravessa são factos que o transcendem.
+</p>
+</div>
+</div>
 
 
 <div id="outline-container-orgheadline34" class="outline-3">
@@ -1399,7 +1460,7 @@ O canvas para o trabalho é apresentado na Figura <a href="#orgparagraph9">9</a>
 
 
 <div id="orgparagraph9" class="figure">
-<p><img src="./images/canvas.png" alt="casa" title="Contentor" align="center" width="600">
+<p><img src="./images/canvas.png" alt="canvas" title="Canvas" align="center" width="600">
 </p>
 <p><span class="figure-number">Figure 9:</span> Canvas</p>
 </div>
@@ -1482,7 +1543,7 @@ Administrador Geral para com o Empreendimento</div></div>
 </div></div>
 <div id="postamble" class="status">
 <p class="author">Author: Luis Moura, Diana Rodrigues</p>
-<p class="date">Created: 2016-11-09 Wed 23:13</p>
+<p class="date">Created: 2016-11-10 Thu 01:39</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
