--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<!-- 2016-11-10 Thu 01:39 -->
+<!-- 2016-11-10 Thu 12:17 -->
 <meta  charset="utf-8">
 <meta  name="viewport" content="width=device-width, initial-scale=1">
 <title>Empreendimento turístico</title>
@@ -231,7 +231,7 @@ for the JavaScript code in this tag.
 </li>
 <li><a href="#orgheadline36">4. <span class="todo TODO">TODO</span> Enquadramento Legal</a></li>
 <li><a href="#orgheadline37">5. <span class="todo TODO">TODO</span> Quantificação de Custos</a></li>
-<li><a href="#orgheadline6">6. <span class="todo TODO">TODO</span> Calendarização</a></li>
+<li><a href="#orgheadline6">6. <span class="todo IN_PROGRESS">IN-PROGRESS</span> Calendarização</a></li>
 <li><a href="#orgheadline42">7. <span class="todo TODO">TODO</span> Estudos de Viabilidade</a>
 <ul>
 <li><a href="#orgheadline38">7.1. Viabilidade Técnica</a></li>
@@ -240,7 +240,7 @@ for the JavaScript code in this tag.
 <li><a href="#orgheadline41">7.4. Viabilidade Económica e Financeira</a></li>
 </ul>
 </li>
-<li><a href="#orgheadline8">8. <span class="todo TODO">TODO</span> Avaliação Financeira</a></li>
+<li><a href="#orgheadline8">8. <span class="todo IN_PROGRESS">IN-PROGRESS</span> Avaliação Financeira</a></li>
 <li><a href="#orgheadline43">9. <span class="todo TODO">TODO</span> Organograma de Gestão do Empreendimento</a></li>
 <li><a href="#orgheadline44">10. <span class="todo TODO">TODO</span> Conclusão</a></li>
 </ul>
@@ -1376,18 +1376,38 @@ arquiteto e decorador. No parte interior da parede exterior, serão
 aplicados placas de isolamento, de espessura a ser determinada após
 análise tecnica quanto à exposição solar, exposição aos ventos e
 outras características que possam afetar o isolamento térmico da casa.
+No interior, as paredes serão revestidas por placas de gesso, sendo
+estas resistentes à humidade, em locais como a casa de banho e
+cozinha. Nas zonas do chuveiro, o revestimento da parede, chão e teto,
+será feito,com placas de cimento, aparafusadas a barras de metal, sendo
+posteriormente nivelada a superfície, de modo a receber o azulejo.
 </p>
-
 
 <p>
-O telhado da casa deverá ser feito de EPDM, de forma a poder
-suportar o painel solar e a movimentação de trabalhadores no telhado. 
+O chão da(s) casa(s) será em piso flutuante, com o tipo de madeira e cor a
+ser decidido pelo arquiteto e o decorador de interiores.. O piso será
+assente no topo de uma camada rígida de isolamento e de uma película
+de polyurethane de 6mm. 
+</p>
+
+<p>
+O telhado da casa deverá ser revestido com EPDM, de forma a poder
+suportar o painel solar e a movimentação de trabalhadores. Como opção,
+e em certas condições, pode-se usar uma camada de
+5 cm de gravilha do rio, de forma a proteger a película de EPDM da
+exposição solar. 
+</p>
+
+<p>
+Janelas em aluminio, com vidro duplo enchido com argon. Portas
+exteriores em carvalho e planas. Portas interiores em MDF, preparadas
+para receber pintura de acordo com o arquiteto e decorador de
+interiores. 
 </p>
 </div>
 </div>
 </div>
 </div>
-
 
 
 <div id="outline-container-orgheadline33" class="outline-3">
@@ -1478,7 +1498,13 @@ O canvas para o trabalho é apresentado na Figura <a href="#orgparagraph9">9</a>
 </div>
 
 <div id="outline-container-orgheadline6" class="outline-2">
-<h2 id="orgheadline6"><span class="section-number-2">6</span> <span class="todo TODO">TODO</span> Calendarização</h2>
+<h2 id="orgheadline6"><span class="section-number-2">6</span> <span class="todo IN_PROGRESS">IN-PROGRESS</span> Calendarização</h2>
+<div class="outline-text-2" id="text-6">
+<p>
+Estudo em Progresso e será incluído na parte 3 do Projeto de
+Investimento
+</p>
+</div>
 </div>
 
 <div id="outline-container-orgheadline42" class="outline-2">
@@ -1502,7 +1528,13 @@ O canvas para o trabalho é apresentado na Figura <a href="#orgparagraph9">9</a>
 </div>
 
 <div id="outline-container-orgheadline8" class="outline-2">
-<h2 id="orgheadline8"><span class="section-number-2">8</span> <span class="todo TODO">TODO</span> Avaliação Financeira</h2>
+<h2 id="orgheadline8"><span class="section-number-2">8</span> <span class="todo IN_PROGRESS">IN-PROGRESS</span> Avaliação Financeira</h2>
+<div class="outline-text-2" id="text-8">
+<p>
+Estudo em Progresso e será incluído na parte 3 do Projeto de
+Investimento
+</p>
+</div>
 </div>
 
 <div id="outline-container-orgheadline43" class="outline-2">
@@ -1543,7 +1575,7 @@ Administrador Geral para com o Empreendimento</div></div>
 </div></div>
 <div id="postamble" class="status">
 <p class="author">Author: Luis Moura, Diana Rodrigues</p>
-<p class="date">Created: 2016-11-10 Thu 01:39</p>
+<p class="date">Created: 2016-11-10 Thu 12:17</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
